--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ width: auto;
 body{
 	/*background-image: url('bg1.png');
 	background-size: cover;*/
-	background-color: #F0F8FF;
+	background-color: OldLace;
 	
 }
 
