--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ width: auto;
 }
 
 body{
-	/*background-image: url('bg1.png');
-	background-size: cover;*/
-	background-color: rgba(209,233,255,0.5);
+	background-image: url('background-3.png');
+	/*background-size: cover;
+	background-color: rgba(209,233,255,0.5);*/
 	
 }
 
