--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ width: auto;
 }
 
 body{
-	background-image: url('background-3.png');
+	background-image: url('background-firefox.png');
 	/*background-size: cover;
 	background-color: rgba(209,233,255,0.5);*/
 	
